[package]
name = "booth-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
scraper = "0.17.1"
thirtyfour = "0.31.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.26"
dotenv = "0.15.0"

[[bin]]
name = "get-booth-data"
path = "src/bin/get-booth-data.rs"
